cabal-version: 2.4

name:                   buy-sell 
version:                1.0.0
description:            Buy/sell contract for Adapix.
author:                 Martín Schere 
maintainer:             mschere@adapix.io 
license:                Apache-2.0
license-file:           LICENSE
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.Marketplace.BuySell

  build-depends:        bytestring
                      , cardano-api
                      , plutus-core
                      -- , plutus-contract
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      -- , text



  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas


executable buy-sell
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              buy-sell.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , plutus-ledger
                      , buy-sell
